[gd_scene load_steps=10 format=3 uid="uid://dm4s0u5iu3s5h"]

[ext_resource type="Script" path="res://Scripts/level.gd" id="1_fa066"]
[ext_resource type="PackedScene" uid="uid://dmmom0c55d07" path="res://Scenes/parallax_background.tscn" id="1_vsuic"]
[ext_resource type="PackedScene" uid="uid://dke07ug8xfo0p" path="res://Scenes/player.tscn" id="2_snxhe"]
[ext_resource type="PackedScene" uid="uid://ca2aglxfsqej5" path="res://Scenes/hud.tscn" id="3_4a71s"]
[ext_resource type="PackedScene" uid="uid://lsljqxnhqckg" path="res://Scenes/enemy_1.tscn" id="3_l0yk7"]
[ext_resource type="PackedScene" uid="uid://bhtl5lw613370" path="res://Scenes/enemy_2.tscn" id="3_ufnhs"]
[ext_resource type="PackedScene" uid="uid://ccepyyal0bueb" path="res://Scenes/enemy_3.tscn" id="4_q1agg"]
[ext_resource type="Script" path="res://Scripts/PlayerSpawnPosition.gd" id="6_x4wtl"]
[ext_resource type="AudioStream" uid="uid://bindww5d2u765" path="res://Assets/hit.wav" id="9_8m6wu"]

[node name="Level" type="Node2D"]
script = ExtResource("1_fa066")
enemy_scenes = Array[PackedScene]([ExtResource("3_l0yk7"), ExtResource("3_ufnhs"), ExtResource("4_q1agg")])

[node name="ParallaxBackground" parent="." instance=ExtResource("1_vsuic")]

[node name="Enemy Container" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Enemy Spawn Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="GameTime" type="Timer" parent="."]
autostart = true

[node name="ShotContainer" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("2_snxhe")]
position = Vector2(152, 56)

[node name="PlayerSpawnPosition" type="Marker2D" parent="."]
position = Vector2(64, 112)
script = ExtResource("6_x4wtl")

[node name="HUD" parent="." instance=ExtResource("3_4a71s")]
metadata/_edit_lock_ = true

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_8m6wu")

[connection signal="timeout" from="Enemy Spawn Timer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="GameTime" to="." method="_on_game_time_timeout"]
